tests/ui/traits/next-solver/opaques/no-define-in-wf-check.current.stderr
error: unconstrained opaque type
  --> $DIR/no-define-in-wf-check.rs:19:18
   |
LL |     type Tait1 = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Tait1` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/no-define-in-wf-check.rs:28:18
   |
LL |     type Tait1 = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Tait1` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/no-define-in-wf-check.rs:38:18
   |
LL |     type Tait1 = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Tait1` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/no-define-in-wf-check.rs:50:18
   |
LL |     type Tait1 = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Tait1` must be used in combination with a concrete type within the same crate

error: aborting due to 4 previous errors

